fix the topbar on mobile phones

--- a/resources/assets/less/light/menu.less
+++ b/resources/assets/less/light/menu.less
@@ -16,7 +16,7 @@ File: Menu
   position: fixed;
   right: 0;
   top: 0px;
-  z-index: 999;
+  z-index: 0;
 
   .topbar-left {
     background: @white;
