--- a/resources/assets/less/light/responsive.less
+++ b/resources/assets/less/light/responsive.less
@@ -91,6 +91,9 @@ File: Responsive
   .content-page .content {
     margin-top: 95px;
   }
+  .topbar {
+    z-index: 999 !important;
+  }
   .topbar .topbar-left {
     height: 75px;
   }
@@ -147,6 +150,9 @@ File: Responsive
   .side-menu {
     z-index: 10 !important;
   }
+  .topbar {
+    z-index: 999 !important;
+  }
 
   .button-menu-mobile {
     display: block;
@@ -158,6 +164,9 @@ File: Responsive
 }
 
 @media (max-width: 420px) {
+  .topbar {
+    z-index: 999 !important;
+  }
   .hide-phone {
     display: none !important;
   }
