--- a/resources/assets/less/shadow/responsive.less
+++ b/resources/assets/less/shadow/responsive.less
@@ -77,6 +77,9 @@ File: Responsive
       margin-left: -75px;
     }
   }
+  .topbar {
+    z-index: 999 !important;
+  }
   .topbar-left {
     width: 70px !important;
 
@@ -147,6 +150,9 @@ File: Responsive
   .side-menu {
     z-index: 10 !important;
   }
+  .topbar {
+    z-index: 999 !important;
+  }
 
   .button-menu-mobile {
     display: block;
@@ -158,6 +164,9 @@ File: Responsive
 }
 
 @media (max-width: 420px) {
+  .topbar {
+    z-index: 999 !important;
+  }
   .hide-phone {
     display: none !important;
   }
